# job-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.claude/: settings.local.json
agents/: base_agent.py  cover_letter_writer.py  cv_analyzer.py  job_analyzer.py  job_searcher.py  suitability_reporter.py
pages/: cover_letter_page.py  cv_analyzer_page.py  job_analyzer_page.py  job_search_page.py  suitability_report_page.py
tests/: test_config.py
utils/: config.py  mongodb.py
